fixing the overflowing issue in  the directions & departements layouts .

--- a/frontend/features/direction/components/DirectionContent/DirectionContent.module.css
+++ b/frontend/features/direction/components/DirectionContent/DirectionContent.module.css
@@ -3,11 +3,13 @@
     height: calc(100% - 60px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    padding-top: 20px;
 }
 .wrapperBox{
     width: 791px;
+    min-height:70%;
     box-shadow: 0px 1.52532px 6.86392px rgba(23, 73, 142, 0.6);
     border-radius: 15.2532px;
     padding: 10px;
@@ -32,4 +34,10 @@
 .departementsTitleWrapper{
     column-gap: 10px;
     align-items: center;
+}
+
+.directionsWrapper{
+    height: 400px;
+    overflow-y: auto;
+    padding-top: 10px;
 }
